--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -52,7 +52,7 @@
             android:layout_height="48dp"
             android:background="@drawable/gradient_button"
             android:fontFamily="sans-serif-medium"
-            android:text="Получить код авторизации"
+            android:text="Продолжить"
             android:textColor="@drawable/button_text"
             android:enabled="false"
             android:layout_marginBottom="20dp"
