--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:background="@color/black"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    app:behavior_hideable="true"
+    app:behavior_peekHeight="700dp"
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     tools:context=".MainActivity3">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_margin="20dp"
-        >
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            >
+            android:layout_marginBottom="25dp">
+
             <ImageView
                 android:id="@+id/imageLogo"
                 android:layout_width="120dp"
@@ -30,84 +33,96 @@
                 android:layout_weight="1" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|end"
-                app:srcCompat="@drawable/baseline_close_24"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="10dp"
+                android:clickable="true"
+                app:srcCompat="@drawable/baseline_close_24" />
         </LinearLayout>
+
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:contentDescription="Больше информации">
+                android:contentDescription="Больше информации"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:padding="2dp"
                     android:layout_margin="2dp"
+                    android:background="@drawable/border"
+                    android:padding="2dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/info1"
-                    android:background="@drawable/border"/>
+                    app:srcCompat="@drawable/info1" />
+
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:padding="2dp"
                     android:layout_margin="2dp"
+                    android:background="@drawable/border"
+                    android:padding="2dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/info2"
-                    android:background="@drawable/border"/>
+                    app:srcCompat="@drawable/info2" />
+
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:padding="2dp"
                     android:layout_margin="2dp"
+                    android:background="@drawable/border"
+                    android:padding="2dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/info3"
-                    android:background="@drawable/border"/>
+                    app:srcCompat="@drawable/info3" />
+
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:padding="2dp"
                     android:layout_margin="2dp"
+                    android:background="@drawable/border"
+                    android:padding="2dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/info4"
-                    android:background="@drawable/border"/>
+                    app:srcCompat="@drawable/info4" />
+
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:padding="2dp"
                     android:layout_margin="2dp"
+                    android:background="@drawable/border"
+                    android:padding="2dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/info5"
-                    android:background="@drawable/border"/>
+                    app:srcCompat="@drawable/info5" />
             </LinearLayout>
         </HorizontalScrollView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:text="684295713"
-                    android:textColor="@color/white"
-                    android:layout_marginEnd="5dp"/>
+                    android:textColor="@color/white" />
+
                 <ImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     app:srcCompat="@android:drawable/ic_popup_sync"
-                    app:tint="@color/colorYellow"/>
+                    app:tint="@color/colorYellow" />
             </LinearLayout>
 
             <LinearLayout
@@ -125,39 +140,42 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_gravity="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
                     app:srcCompat="@android:drawable/radiobutton_off_background"
                     app:tint="@color/colorGreen" />
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="10dp"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="90dp"
                 android:layout_height="80dp"
                 android:contentDescription="QR"
                 app:srcCompat="@android:drawable/progress_indeterminate_horizontal" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginStart="15dp">
+                android:layout_marginStart="15dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/abril_fatface"
                     android:text="0 B"
-                    android:textSize="20sp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -165,6 +183,7 @@
                     android:text="GOLD"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -179,12 +198,12 @@
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/gray_button"
-            android:fontFamily="sans-serif-medium"
             android:drawableLeft="@drawable/baseline_account_circle_24"
-            android:paddingStart="10dp"
             android:drawablePadding="10dp"
-            android:text="Профиль"
+            android:fontFamily="sans-serif-medium"
             android:gravity="left|center_vertical"
+            android:paddingStart="10dp"
+            android:text="Профиль"
             android:textColor="@color/colorYellow"
             app:tint="@color/colorYellow" />
 
@@ -252,32 +271,33 @@
             android:paddingStart="10dp"
             android:text="О компании"
             android:textColor="@color/colorYellow" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="26dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/gray_button"
             android:fontFamily="sans-serif-medium"
+            android:padding="6dp"
             android:text="Соглашение на предоставление сервиса"
             android:textColor="@color/colorYellow"
-            android:textSize="12sp"
-            android:padding="6dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:textSize="12sp" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="26dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/gray_button"
             android:fontFamily="sans-serif-medium"
+            android:padding="6dp"
             android:text="Политика конфиденциальности"
             android:textColor="@color/colorYellow"
-            android:textSize="12sp"
-            android:padding="6dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:textSize="12sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Версия: 2.2.4"
-            android:textColor="@color/colorLightGray"/>
+            android:textColor="@color/colorLightGray" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
