--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -21,7 +21,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:contentDescription="Больше информации"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginBottom="5dp">
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="80dp"
@@ -67,47 +68,140 @@
         <com.yandex.mapkit.mapview.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
-            android:layout_height="550dp"
-            android:layout_weight="0"/>
+            android:layout_height="400dp"/>
 
-        <com.google.android.material.tabs.TabLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:tabIconTint="@color/colorYellow"
-            app:tabIndicatorColor="#00FFFFFF"
-            app:tabTextColor="@color/colorYellow">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:text="684295713"
+                    android:textColor="@color/white" />
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    app:srcCompat="@android:drawable/ic_popup_sync"
+                    app:tint="@color/colorYellow" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="22dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|end"
+                android:layout_weight="0.4">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:text="№ 684295713"
+                    android:textColor="@color/colorLightGray" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    app:srcCompat="@android:drawable/radiobutton_off_background"
+                    app:tint="@color/colorGreen" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="90dp"
+                android:layout_height="80dp"
+                android:contentDescription="QR"
+                app:srcCompat="@android:drawable/progress_indeterminate_horizontal" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/abril_fatface"
+                    android:text="0 B"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="GOLD"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="+2 бонуса за каждые 100₽"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+            <Button
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:icon="@drawable/baseline_format_list_bulleted_24"
-                android:text="Список" />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="match_parent"
+                android:drawableTop="@drawable/baseline_format_list_bulleted_24"
+                android:textColor="@color/colorYellow"
+                android:background="@color/black"
+                android:text="Список"/>
+            <Button
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:icon="@drawable/baseline_local_gas_station_24"
-                android:text="Запрвить"
-
-                />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/baseline_local_gas_station_24"
+                android:textColor="@color/colorYellow"
+                android:background="@color/black"
+                android:text="Заправить"/>
+            <Button
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:icon="@drawable/baseline_local_car_wash_24"
-                android:text="Помыть"
-
-                />
-
-            <com.google.android.material.tabs.TabItem
+                android:layout_weight="1"
+                android:drawableTop="@drawable/baseline_local_car_wash_24"
+                android:textColor="@color/colorYellow"
+                android:background="@color/black"
+                android:text="Помыть"/>
+            <Button
                 android:id="@+id/menu"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:icon="@drawable/baseline_menu_24"
-                android:text="Меню"
-
-                />
-        </com.google.android.material.tabs.TabLayout>
+                android:layout_weight="1"
+                android:drawableTop="@drawable/baseline_menu_24"
+                android:textColor="@color/colorYellow"
+                android:background="@color/black"
+                android:text="Меню"/>
+        </LinearLayout>
     </LinearLayout>
 
 
